# dns-smart-block

./: .gitignore  CONTRIBUTING.org  Cargo.toml  README.org  flake.nix  llms.org  rustfmt.toml  tasks.org  vibe-coding.org
.cargo-husky/: README.md
.cargo-husky/hooks/: pre-commit
blocklist-server/: Cargo.toml
blocklist-server/frontend/src/: Main.elm
blocklist-server/src/: cli.rs  db.rs  lib.rs  main.rs  metrics.rs  server.rs
blocklist-server/static/: classifications.css  classifications.js  elm.js
blocklist-server/templates/: classifications.html
blocklist-server/tests/: error_messages.rs  template_loading.rs
classifier/: Cargo.toml  prompt-template.txt
classifier/src/: cli_args.rs  error.rs  lib.rs  main.rs  output.rs  web_classify.rs
classifier/tests/: MODEL_EVALUATION.md  integration_test.rs  json_output_test.rs  model_evaluation_test.rs
cli/: Cargo.toml
cli/src/: error.rs  main.rs
cli/src/commands/: domain.rs  mod.rs
common/: Cargo.toml
common/src/: db_models.rs  lib.rs  logging.rs  systemd.rs  test_db.rs
common/src/db/: error.rs  mod.rs  models.rs  operations.rs  queries.rs
diagrams/: classifier-states.d2  deployment.d2  event-sourcing.d2  request-flow.d2
log-processor/: Cargo.toml
log-processor/src/: cli_args.rs  database_url.rs  db.rs  dnsdist.rs  lib.rs  log_parser.rs  log_source.rs  main.rs  queue.rs
log-processor/tests/: db_test.rs  integration_test.rs
migrations/: 20250120000001_create_prompts.sql  20250120000002_create_domain_classification_events.sql  20250120000003_create_domains.sql  20250120000004_create_domain_classifications.sql  20260207000001_add_reasoning_to_classifications.sql  20260208000001_add_is_matching_to_classifications.sql  20260208000002_add_prompt_id_to_events.sql  20260208000003_make_prompt_id_nullable.sql  20260305000001_create_users.sql  20260305000002_create_classification_sources.sql  20260305000003_migrate_to_source_id.sql  20260305000004_add_provisioned_source_type.sql  20260305000005_provisioned_singleton_index.sql  20260305000006_add_expired_action.sql  20260306000001_add_dns_nxdomain_source_type.sql  20260316000001_add_provisioned_pattern_source_type.sql  20260316000002_add_provisioned_pattern_rules.sql  20260526000001_index_classified_events_recent.sql  20260526000002_backfill_orphan_domains.sql
nix/: MODULE.org  README.org  SUMMARY.org  default.nix  dh-view.nix  module-example.nix  nixos-module.nix  prometheus-exporter.nix
nix/integrations/: blocky.nix
prompts/: README.org  gaming-classifier.txt  social-media-classifier.txt  video-streaming-classifier.txt
queue-processor/: Cargo.toml
queue-processor/src/: config.rs  database_url.rs  db.rs  dns.rs  lib.rs  main.rs
queue-processor/tests/: db_test.rs  source_workflows_test.rs
scripts/: cleanup-queued-events.sql  ollama-test
worker/: Cargo.toml
worker/src/: cli_args.rs  error.rs  lib.rs  main.rs  web_classify.rs
worker/tests/: integration_test.rs
