[workspace]
members = ["common", "classifier", "log-processor", "queue-processor", "blocklist-server"]
resolver = "2"

[workspace.dependencies]
base64ct = "1.6"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono", "migrate"] }
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[workspace.package]
edition = "2024"