[workspace]
members = ["common", "classifier", "log-processor", "queue-processor", "blocklist-server", "cli"]
resolver = "2"

[workspace.dependencies]
base64ct = "1.6"
sd-notify = "0.4"
serial_test = "3"
tokio-listener = { version = "0.5", features = ["axum07"] }
tracing-journald = "*"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono", "migrate"] }
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[workspace.package]
version = "0.1.0"
edition = "2024"