[package]
name = "dns-smart-block-common"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "*", features = ["derive", "env"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
atty = "*"
sqlx = { workspace = true }
chrono = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"

[dev-dependencies]
cargo-husky = { version = "1", features = ["user-hooks"] }
