[package]
name = "dns-smart-block-common"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "*", features = ["derive", "env"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
tracing-journald = { workspace = true }
atty = "*"
sd-notify = { workspace = true }
sqlx = { workspace = true }
chrono = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
thiserror = "*"
tokio = { workspace = true }

[dev-dependencies]
cargo-husky = { version = "1", features = ["user-hooks"] }
