[package]
name = "dns-smart-block-log-processor"
version = "0.1.0"
edition = "2021"

[lib]
name = "dns_smart_block_log_processor"
path = "src/lib.rs"

[dependencies]
dns-smart-block-common = { path = "../common" }
clap = { version = "*", features = ["derive", "env"] }
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["codec"] }
futures = "*"
async-stream = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
atty = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
thiserror = "*"
reqwest = { version = "*", features = ["json"] }
async-nats = "0.33"
regex = "*"
notify = "6"
chrono = "*"
base64ct = { workspace = true }
url = "*"
# Heap profiler.  Active only when the `profiling` feature is enabled —
# instrumented builds swap the global allocator to `dhat::Alloc` and dump
# a dhat-heap.json on graceful shutdown.  See tasks.org "Memory leak" for
# the diagnostic flow.
dhat = { version = "0.3", optional = true }

[features]
profiling = ["dep:dhat"]

[dev-dependencies]
wiremock = "0.5"
tokio-test = "*"
tempfile = "*"
serial_test = { workspace = true }
cargo-husky = { version = "1", features = ["user-hooks"] }
