[package]
name = "dns-smart-block-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "*", features = ["derive", "env"] }
reqwest = { version = "*", features = ["json", "gzip"] }
scraper = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
thiserror = "*"
